# hermes-agent-evo

./: .gitignore  AGENTS.md  README.md  cli.py  hrcn_runtime_bridge.py  pyproject.toml  rhp_runtime_bridge.py
cms/: .gitignore  .hrcn-read-only-mirror.json  AGENTS.md  LICENSE  MIRROR_READONLY_BOUNDARY.md  README.md  README_90_SECONDS.md  pyproject.toml
cms/configs/: README.md  cms_default.json
cms/docs/: README.md
cms/outputs/: README.md
cms/rcc/: README.md
cms/reports/: README.md
cms/schemas/: README.md  agent_governance_context.schema.json  authorized_apply_packet_diff_manifest.schema.json  authorized_dry_apply_sandbox.schema.json  authorized_repair_apply_gate.schema.json  authorized_repair_dry_run.schema.json  candidate_memory_action.schema.json  feedback_item.schema.json  loop_drift_pressure.schema.json  loop_repair_recommendation.schema.json  reflective_git_node.schema.json  repair_closure_plan.schema.json  thread_rehydration_scan.schema.json
cms/scripts/: README.md  patch_render_hygiene_token_v0_3b1a.py  repair_readme_documentation_coherence_v0_3b2a.py  repair_readme_documentation_coherence_v0_3b2a1.py  repair_readme_surface_v0_3b1a.py  repair_readme_surface_v0_3b2.py  repair_runtime_decision_kernel_v0_3b3.py  repair_surface_validator_compatibility_v0_3b2a2.py  repair_version_token_normalization_v0_3b2a3.py  validate_release.py
cms/src/: README.md
cms/tests/: README.md  test_agent_governance_kernel_v0_5_0.py  test_authorized_apply_packet_diff_manifest_v0_4_7.py  test_authorized_dry_apply_sandbox_v0_4_8.py  test_authorized_repair_apply_gate_v0_4_6.py  (+10 more)
(+2025 files in other folders)
