[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cybernetic-memory-system"
version = "0.1.0"
description = "Local-first Python/RCC runtime scaffold for cybernetic repository memory."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "James Paul Jackson"}]
dependencies = []

[project.scripts]
cms = "cms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]